CSS fix: 'overflow: hidden'

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* background-color: rgb(228, 99, 87); */
 }
 
